[gd_scene load_steps=2 format=3 uid="uid://b88fll8l42lpb"]

[ext_resource type="Script" path="res://Displays/Credits/credits.gd" id="1_clr7e"]

[node name="Credits" type="Node"]
script = ExtResource("1_clr7e")

[node name="ControlNode" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsLabel" type="Label" parent="ControlNode"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_top = 104.0
offset_right = 99.0
offset_bottom = 153.0
grow_horizontal = 2
text = "Made using Godot Engine
Credits to..."

[node name="BackButton" type="Button" parent="ControlNode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = 124.0
offset_right = 22.5
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[connection signal="pressed" from="ControlNode/BackButton" to="." method="_on_back_button_pressed"]
